@@ -1,4 +1,7 @@
 2006-07-26:
+	* src/v4.c(v4_save): actually set the permissions on the new file to
+	the requested values.  Note in the warning why we fail to open a
+	file, which is returned as the result and not in errno.
 	* src/storetmp.c(_pam_krb5_storetmp_data): try to setreu/gid if either
 	the real or effective values don't match the desired value.
 	* src/pam_krb5_storetmp.c(main): only use strtoll() if it's
